deployments/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-server-service
spec:
  selector:
    app: chat-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
