deployments/kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-server-ingress
spec:
  rules:
  - host: <Local_minikube_ip>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat-server-service
            port:
              number: 8080
